Changes between 1.2.x and 1.3.0-git:
--------------------------------

Encoders:
 * high10,high422 and high444 encoding support in h264


Changes between 1.1.12 and 1.2.0:
---------------------------------

Important notes:
 * The licenses of libVLC and libVLCcore have changed from GPLv2+ to LGPLv2.1+
 * Start/end titles/chapters are now specified with # rather than @ to fix
   conflicts with some URLs and file names. For instance, this plays a DVD
   from the 2nd chapter of the 1st title up to the 4th chapter of the 3rd
   title:  vlc dvd://#1:2-3:4
 * The 40+ --*-caching options were simplified and dumbed down to 4 options:
   - --file-caching specifies caching for local files,
   - --network-caching specifies caching for network resources,
   - --live-caching specifies caching for capture devices and
   - --disc-caching specifies caching for local optical media.
   All values are expressed in milliseconds as in previous versions.
 * HTTP server IP address, port, and TLS configuration is now centralized:
   - The --http-host option sets the address, e.g. "--http-host=[2001:db8::1]".
     By default, both :: and 0.0.0.0 are used.
   - The --http-port and --https-port options set the port numbers.
     By default, 8080 is used for HTTP, and 8443 for HTTPS.
   - The TLS credentials are configured with --http-cert (public certificate),
     --http-key (private key), --http-ca (optional CA) and
     --http-crl (optional CRL).
 * RTSP server IP address and port are updated similarly.
   Use --rtsp-host and --rtsp-port respectively.
 * The --miface-addr option does not exist anymore. To select the multicast
   output interface, use --miface instead, e.g. --miface=eth0.
 * The Windows version will only work with Windows XP SP2 or later.
   Windows 2000 SP4, Windows XP < SP2, Windows 2003 SP0 are now unsupported.

Important changes for packagers:
 * The default builds now assume that the operating system uses UTF-8 for